# brick-bacnet-mcp

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  DEMO.md  EXAMPLES.md  RELEASE_v0.1.0a0.md  RULES.md
examples/: 01_discover_and_list.py  02_tag_one_ahu.py  03_query_via_claude_desktop.md  config_example.yaml
scripts/: loopback_demo.py  run_simulator.py
src/brick_bacnet_mcp/: __init__.py  __main__.py  config.py  discovery.py  models.py  reader.py  server.py  tagger.py  topology.py
src/brick_bacnet_mcp/rules/: __init__.py  brick_rules.yaml  haystack_rules.yaml
tests/: conftest.py  test_config.py  test_integration.py  test_tagger.py  test_topology.py
tests/fixtures/: simulator_devices.yaml
