[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brick-bacnet-mcp"
version = "0.1.0a0"
description = "Read-only BACnet/IP gateway exposing Brick + Project Haystack tagged building topology to LLM agents via MCP"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Yves Habchy"}
]
keywords = ["bacnet", "brick-schema", "project-haystack", "mcp", "building-automation", "msi", "llm-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.11"
dependencies = [
    "bacpypes3>=0.0.100",
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/Yveshby27/brick-bacnet-mcp"
Research = "https://habchy.dev/research/bacnet-msi-semantic-gap"
Issues = "https://github.com/Yveshby27/brick-bacnet-mcp/issues"
Changelog = "https://github.com/Yveshby27/brick-bacnet-mcp/blob/main/CHANGELOG.md"

[project.scripts]
brick-bacnet-mcp = "brick_bacnet_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brick_bacnet_mcp = ["rules/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
